<resources>
    <string name="app_name">Instatram</string>
    <string name="button">Start the App </string>
    <string name="welcome">Welcome to Barcelona</string>
    <string name="button1">Station 1 </string>
    <string name="button2">Station 2 </string>
    <string name="button3">Station 3 </string>
    <string name="button4">Station 4 </string>
    <string name="button5">Station 5 </string>
    <string name="item3">home</string>
    <string name="item4">map</string>
    <string name="item5">settings</string>
    <string name="subitem1">language</string>
    <string name="subitem2">theme</string>
    <string name="language">Change the language</string>
    <string name="english">English</string>
    <string name="spanish">Spanish</string>
    <string name="theme">Change the theme</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="title_activity_maps">Map</string>


</resources>