<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/item1"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="item1"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/item2"
        android:icon="@drawable/ic_baseline_add_location_24"
        android:title="item2"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/item3"
        android:title="@string/item3"
        app:showAsAction="never" />
    <item
        android:id="@+id/item4"
        android:title="@string/item4"
        app:showAsAction="never" />

    <item
        android:id="@+id/item5"
        android:title="@string/item5"
        app:showAsAction="never">

        <menu>

            <item
                android:id="@+id/subitem1"
                android:title="@string/subitem1" />

            <item
                android:id="@+id/subitem2"
                android:title="@string/subitem2" />

        </menu>

    </item>


</menu>